2012-02-23  Jonathan Gillaspie  <jonathan.gillaspie@testplant.com>

	* WinNSMenu.m: Allow punctions and symbols in the key equivalent field.

2011-08-15  Eric Wasylishen  <ewasylishen@gmail.com>

	* WinNSButton.m: Use new buttonMarginsForCell: API to return
	top/bottom/left/right margins

2010-12-20 Doug Simons <doug.simons@testplant.com>

	* WinNSMenu.m:
	Be sure to destroy the menu itself, or it will eventually crash.

2010-11-19 Doug Simons <doug.simons@testplant.com>

	* WinNSColorWell.m:
	Make border of NSColorWell smaller to more closely match Cocoa metrics. This makes a
	big difference in small color wells.

2010-11-19 Doug Simons <doug.simons@testplant.com>

	* WinNSMenu.m:
	Send actions for items in a popUp menu as well as in a pullDown.

2010-11-01 Jonathan Gillaspie <jonathan.gillaspie@testplant.com>>

	* Resources/ThemeImages/common_3DArrowUp.tif:
	Small change to make 3D Arrow consistent with other Windows UI controls.
	
2010-10-29 Doug Simons <doug.simons@testplant.com>

	* WinNSMenu.m:
	Implement new doesProcessEventsForPopUpMenu method. This fixes a
	problem with actions getting sent twice when using this theme.

2010-10-27 Doug Simons <doug.simons@testplant.com>

	* WinNSMenu.m:
	Implemented checkmarks on selected menu items.

2010-08-31 Jonathan Gillaspie <jonathan.gillaspie@testplant.com>

	* WinNSOpenPanel.m: Fix a small problem opening a FOLDER after having 
	opened a document previously.  Needed to reset the file offset pointer.

2010-08-30 Doug Simons <doug.simons@testplant.com>

	* WinNSMenu.m:
	Fix problem of pulldown menu incorrectly including the button title.

2010-08-25 Eric Wasylishen <ewasylishen@gmail.com>

	* WinNSMenu.m: Provisional fix for https://savannah.gnu.org/bugs/?29708
	(menu not updated when selecting "Undo" in Ink)

2010-07-06 Eric Wasylishen <ewasylishen@gmail.com>

	* WinNSOpenPanel.m: Remove assumtion that the app's default
	file types array is non-empty. This was causing an exception